---------------------------------------------------------------------------------------------------
Version: 0.17.00
Date: 00. 00. 0000
  Features:
    - You can now set a hard limit on the machine amount of a recipe line
    - Added a performance mode setting that disables certain performance-intensive features
  Changes:
    - Improved performance of the calculation model
  Bugfixes:
    - Fixed SI-unit localisations not actually being shown
    - Made time-shorthands (s, m, h) properly localisable

---------------------------------------------------------------------------------------------------
Version: 0.17.64
Date: 12. 11. 2019
  Bugfixes:
    - Fixed a crash caused by the most recent update

---------------------------------------------------------------------------------------------------
Version: 0.17.63
Date: 12. 11. 2019
  Changes:
    - Slightly improved calculation performance by using new API capabilities
  Bugfixes:
    - Improved compatibility with PyVeganism
    - Fixed the main interface refreshing unnecessarily sometimes
    - Fixed the horrible performance of the 'Floor Total'-mode

---------------------------------------------------------------------------------------------------
Version: 0.17.62
Date: 04. 11. 2019
  Changes:
    - Made the 'Tutorial Mode'-tooltips a bit more consistent
    - Made units like Watt or Joule localisable

---------------------------------------------------------------------------------------------------
Version: 0.17.61
Date: 24. 10. 2019
  Features:
    - Added pollution calculation (Shown in the tooltip of the energy consumption of every recipe line)
  Changes:
    - Changed around the preferences and mod-settings a bit
    - Reworded several of the mod-setting descriptions
    - Increased the subfactory name length-limit from 16 to 24
  Bugfixes:
    - Fixed changelog

---------------------------------------------------------------------------------------------------
Version: 0.17.60
Date: 24. 10. 2019